--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@swup/progress-plugin": "^1.1.2",
     "gia": "^1.0.0",
     "gsap": "^2.0.2",
+    "lazysizes": "^5.3.2",
     "npm-watch": "^0.11.0",
     "swup": "^2.0.2"
   },
