--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@swup/js-plugin": "^1.0.4",
     "@swup/overlay-theme": "^1.1.1",
     "@swup/progress-plugin": "^1.1.2",
+    "@swup/scroll-plugin": "^1.1.1",
+    "animate.css": "^4.1.1",
     "gia": "^1.0.0",
     "gsap": "^2.0.2",
     "lazysizes": "^5.3.2",
