--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@swup/progress-plugin": "^1.1.2",
     "@swup/scroll-plugin": "^1.1.1",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "gia": "^1.0.0",
     "gsap": "^2.0.2",
     "lazysizes": "^5.3.2",
