--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@swup/js-plugin": "^1.0.4",
     "@swup/overlay-theme": "^1.1.1",
     "@swup/progress-plugin": "^1.1.2",
+    "@swup/scripts-plugin": "^1.1.0",
     "@swup/scroll-plugin": "^1.1.1",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "gia": "^1.0.0",
     "gsap": "^2.0.2",
     "lazysizes": "^5.3.2",
+    "lottie-web": "^5.9.6",
     "npm-watch": "^0.11.0",
     "swup": "^2.0.2"
   },
