--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Fjaka",
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "@swup/body-class-plugin": "^1.0.2",
     "@swup/debug-plugin": "^1.0.2",
     "@swup/js-plugin": "^1.0.4",
